examples/test/testpolicy3008.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3008
  namespace: namespace331
spec:
  podSelector:
    matchLabels:
      key47: value5
      key28: value42
      key34: value28
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value40
          key27: value0
          key28: value3
      podSelector:
        matchLabels:
          key26: value27
          key10: value14
          key7: value12
